Added uwsgi init file

--- a/app/uwsgi.ini
+++ b/app/uwsgi.ini
@@ -1,10 +1,10 @@
 [uwsgi]
 module = wsgi:app
-
+http-socket = :9090
 master = true
 processes = 5
 
-socket = myproject.sock
+socket = /app/uwsgi.sock
 chmod-socket = 660
 vacuum = true
 
