--- a/server-conf/nginx.conf
+++ b/server-conf/nginx.conf
@@ -24,14 +24,13 @@ http {
     index   index.html index.htm;
 
     server {
-        listen       80 default_server;
-        listen       [::]:80 default_server;
+        listen       0.0.0.0:9090;
         server_name  localhost;
         root         /var/www/html;
 
         location /render_jinja {
             include uwsgi_params;
-            uwsgi_pass unix:/app/uwsgi.socket;
+            uwsgi_pass unix:/tmp/uwsgi.sock;
         }
     }
 }
