--- a/server-conf/uwsgi.ini
+++ b/server-conf/uwsgi.ini
@@ -1,11 +1,14 @@
 [uwsgi]
 module = wsgi:app
-http-socket = :9090
+
 master = true
 processes = 5
 
-socket = /app/uwsgi.sock
-chmod-socket = 660
+uid = www-data
+gid = www-data
+
+socket = /tmp/uwsgi.sock
+chmod-socket = 664
 vacuum = true
 
 die-on-term = true
