--- a/kube/config-map.yml
+++ b/kube/config-map.yml
@@ -2,15 +2,11 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: jinja-backend-conf
+  name: jinja-backend-nginx-conf
   labels:
-    name: jinja-backend-conf
+    name: jinja-backend-nginx-conf
   namespace: jinja
 data:
-  application.conf: |-
-    LOG_LOCATION = "app.log"
-    LOG_FORMAT = "%(asctime)s %(levelname)s: %(message)s"
-
   nginx.conf: |-
     user www-data;
     worker_processes auto;
@@ -48,37 +44,3 @@ data:
             }
         }
     }
-
-  uwsgi.ini: |-
-    [uwsgi]
-    module = wsgi:app
-
-    master = true
-    processes = 5
-
-    uid = www-data
-    gid = www-data
-
-    socket = /tmp/uwsgi.sock
-    chmod-socket = 664
-    vacuum = true
-
-    die-on-term = true
-
-  supervisord.conf: |-
-    [supervisord]
-    nodaemon=true
-
-    [program:uwsgi]
-    command=/usr/local/bin/uwsgi --ini /app/uwsgi.ini
-    stdout_logfile=/dev/stdout
-    stdout_logfile_maxbytes=0
-    stderr_logfile=/dev/stderr
-    stderr_logfile_maxbytes=0
-
-    [program:nginx]
-    command=/usr/sbin/nginx -g "daemon off;"
-    stdout_logfile=/dev/stdout
-    stdout_logfile_maxbytes=0
-    stderr_logfile=/dev/stderr
-    stderr_logfile_maxbytes=0
