--- a/kube/service.yml
+++ b/kube/service.yml
@@ -3,12 +3,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: jinja-backend-svc
-  namespace: jinja-dev
+  namespace: jinja
 spec:
   selector:
     app: jinja-backend
   type: LoadBalancer
   ports:
-    - port: 5000
-      targetPort: 5000
+    - port: 9090
+      targetPort: 9090
       nodePort: 32100
